[package]
name = "blacklung"
version = "0.0.1"
authors = ["Michael Leandersson <tripokey@gmail.com>", "Niklas Thörne <notrupertthorne@gmail.com>"]

description = "Minecraft server"
repository = "https://github.com/xyrosource/blacklung"
license = "MIT OR Apache-2.0"

[dependencies]
tokio-core = "0.1.4"
futures = "0.1"
slog = "1.5"
slog-term = "1.5"

[dependencies.error-chain]
version = "0.8.1"
default-features = false
